# CTkDesigner

./: .gitignore  README.md  a.json  config.ini  main.py  pyinstaller.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
autosaves/: autosave_1749521873.json.json
components/: left_sidebar.py  right_sidebar.py  toolbar.py
config/: config_manager.py
core/: app.py  events.py  events_manager.py  logging.py  proyect.py  proyect_manager.py
data/: commands.py  variable.py
functions/: __init__.py  create_widget_animation.py  generic.py  sidebars_utils.py  translator_manager.py  widget_resize.py
objects/: color_picker.py  custom_menu_bar.py  theme_manager.py  virtual_window.py  zoomable_canvas.py
objects/CTkMenuBar/: dropdown_menu.py  example.py  menu_bar.py
objects/window/: guide_manager.py  io_manager.py  virtual_window.py  widget_manager.py  window_base.py  window_state.py
plugins/: plugin_config.json  plugin_logger.py  plugin_manager.py
plugins/AutoSave/: config.json  plugin.py
plugins/CustomCard/: card_widget.py  plugin.py
plugins/ExportFormatManager/: formats.json  plugin.py
plugins/codeEditor/: plugin.py
translations/: decorators.py  translations.py  translator.py
translations/locales/: en.json  es.json
